Hides scrollbar, fixes overflow-x problem when rendered patterns spill out horizontally, code now uses pre-wrap to avoid layout issues on smaller screens.

--- a/src/styles/doxray-docs.less
+++ b/src/styles/doxray-docs.less
@@ -15,16 +15,23 @@ label:
 */
 
 .doxray-docs_nav {
-    box-sizing: border-box;
     position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
     width: @doxray-nav-width;
-    padding: 0 0 60px 0;
     background: @doxray-color-paper-white;
-    overflow-y: auto;
+    overflow: hidden;
     z-index: 0;
+}
+
+.doxray-docs_nav-scroll {
+    width: 100%;
+    height: 100%;
+    padding-right: 20px;
+    padding-bottom: 60px;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 
