--- a/src/styles/doxray-template.less
+++ b/src/styles/doxray-template.less
@@ -226,6 +226,7 @@ label:
 
 .doxray-doc {
     padding: @doxray-margin-large;
+    overflow-x: hidden;
 }
 
 .doxray-doc + .doxray-doc {
@@ -522,6 +523,7 @@ label:
     background: @doxray-color-dirty-white;
     font-size: @doxray-font-size-md;
     line-height: 1.5;
+    white-space: pre-wrap;
 }
 
 
